app-test/testdata/typesystem/neg/pattern-matching-alternative-expression-type/src/patmat.cal
namespace patmat:
    int a;
    actor AlternativeExpressionType() ==> int OUT:
        do
            OUT <--
                case a of
                    1 : true end // error
                    _ : 0 end
                end;
        end
    end
end